Actividad Evaluable 04-FINAL UD03

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,34 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=${DB_DRIVER}
 
-# Forzado a la inicializacion del datasource con los archivos schema.sql y data.sql
+# Configuracion de Hibernate y JPA
+# Define como Hibernate gestiona la creacion y actualizacion del esquema de la
+# base de datos
+# "none" no actualiza la base de datos de forma automatica y se deja la gestion
+# manual en schema.sql y data.sql
 spring.jpa.hibernate.ddl-auto=none
+
+# Muestra las consultas SQL generadas en la consola
+spring.jpa.show-sql=true
+
+# Formatea las consultas SQL para que sean mas legibles en la consola
+spring.jpa.properties.hibernate.format_sql=true
+
+# Dialecto especifico de Hibernate para MariaDB (es compatible con MySQL)
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Inicializacion de la base de datos
+# Esta propiedad asegura que Spring Boot ejecuta los archivos la estrucutra
+# (schema.sql) y de carga de datos (data.sql) al inicio
 spring.sql.init.mode=always
 
-# Define la codificacion de los archivos de propiedades de mensajes.
+# Configuracion de los logs del datasource
+# Muestra detalles adicionales sobre la conexion a la base de datos
+logging.level.org.springframework.jdbc.datasource.DataSourceTransactionManager= \
+DEBUG
+
+# Numero maximo de conexiones que puede abrir el pool de conexiones
+spring.datasource.hikari.maximum-pool-size=10
+
+# Define la codificacion de los archivos de propiedades de mensajes
 spring.messages.encoding=UTF-8
