--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,13 @@ spring.datasource.hikari.maximum-pool-size=10
 
 # Define la codificacion de los archivos de propiedades de mensajes
 spring.messages.encoding=UTF-8
+
+spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.scope=read:user
+spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
+spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
+spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+# Este es el campo que se recuperará para mostrar en las pantallas, en este caso login significa el nombre de usuario
+# con el que se hace login
+spring.security.oauth2.client.provider.github.user-name-attribute=login
